--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sequelize": "^6.37.5"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node server.js"
   }
 }
