--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "sequelize-cli": "^6.6.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "node server.js"
+    "start": "node server.js"
   }
 }
