--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "umzug": "^3.8.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "migrate": "node -e 'require(\"./migrations-runner.js\")()'",
+    "vercel-build": "npm run migrate"
   }
 }
