--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,14 @@
     "builds": [
         {
             "src": "server.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "build": {
+                    "env": {
+                        "NODE_ENV": "production"
+                    }
+                }
+            }
         }
     ],
     "routes": [
@@ -11,5 +18,8 @@
             "src": "/(.*)",
             "dest": "/server.js"
         }
-    ]
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
 }
