updating server.js and pre-deployment Hook

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "migrate": "node -e 'require(\"./migrations-runner.js\")()'"
+    "migrate": "npx sequelize-cli db:migrate",
+    "deploy": "npm run migrate && vercel deploy"
   }
 }
