--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ EMAIL_USER=
 EMAIL_PASSWORD=
 
 TOKEN_SECRET=
+
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_CLIENT_ID=
+FIREBASE_CLIENT_X509_CERT_URL=
+FIREBASE_STORAGE_BUCKET=
