--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "firebase-admin": "^13.0.1",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
