My debit card can't used for the Firebase billing, so I change the storage to Supabase

--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,5 @@ EMAIL_PASSWORD=
 
 TOKEN_SECRET=
 
-FIREBASE_PROJECT_ID=
-FIREBASE_PRIVATE_KEY_ID=
-FIREBASE_PRIVATE_KEY=
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_CLIENT_ID=
-FIREBASE_CLIENT_X509_CERT_URL=
-FIREBASE_STORAGE_BUCKET=
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
