--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "@supabase/supabase-js": "^2.46.1",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
@@ -15,12 +16,14 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2",
     "umzug": "^3.8.2",
     "validator": "^13.12.0"
   },
   "scripts": {
     "start": "node server.js",
     "migrate": "npx sequelize-cli db:migrate"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
