added analyze right after note created or note updated

--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,14 @@ PORT=
 HOST=
 NODE_ENV=
 
+FRONTEND_URL=
+
 EMAIL_USER=
 EMAIL_PASSWORD=
 
 TOKEN_SECRET=
 
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
+BUCKET_NAME=
+SERVICE_TOKEN_PATH=
+
+CLOUDRUNAPI=
