--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
-    "@supabase/supabase-js": "^2.46.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -16,12 +16,12 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "umzug": "^3.8.2",
     "validator": "^13.12.0"
   },
   "scripts": {
     "start": "node server.js",
-    "migrate": "npx sequelize-cli db:migrate"
+    "migrate": "npx sequelize-cli db:migrate",
+    "rollback": "npx sequelize-cli db:migrate:undo all"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
