--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules
 .env
-testingmentalq-172ebf7d861a.json
-mentalq-app-firebase-adminsdk-3sddi-e6a0a1e51a.json
+important-credentials
 .env.vercel
