--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,12 @@ EMAIL_PASSWORD=
 TOKEN_SECRET=
 
 BUCKET_NAME=
-SERVICE_TOKEN_PATH=
 
+# put the link to the ML api here
 CLOUDRUNAPI=
 
+# this is the content of the json file (copy then paste it here)
 GCLOUD_CREDENTIALS=
 
+# this is the content of the json file (copy then paste it here)
 FIREBASE_CREDENTIALS=
