updating the vercel be

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@ EMAIL_PASSWORD=
 
 TOKEN_SECRET=
 
-BUCKET_NAME=
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
 
 # put the link to the ML api here
 CLOUDRUNAPI=
