--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
+    "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
